syntax = "proto3";

package classService.v1;


service FreeClassroomSvc {
  rpc QueryFreeClassroom(QueryFreeClassroomReq) returns (QueryFreeClassroomResp);
}

message QueryFreeClassroomReq {
  string year = 1;
  string semester = 2;
  int32  week = 3; //哪一周
  int32 day = 4; //哪一天
  repeated int32 sections = 5; //哪几节课
  string wherePrefix = 6; //查询的地点前缀，比如南湖1楼，就是 "n1"，7号教学楼2楼就是"72"
  string stuID  = 7;//学号
}
message QueryFreeClassroomResp {
  repeated ClassroomAvailableStat stat = 1;
}
message ClassroomAvailableStat {
  string classroom = 1;
  repeated bool availableStat = 2; //空闲情况，顺序和请求的sections对应, true表示空闲
}